attached_assets/Pasted-xecuting-task-platformio-run-target-upload-environment-esp32-s3-devkitc-1-Processing-esp32-s3-1763008027922_1763008027923.txt
xecuting task: platformio run --target upload --environment esp32-s3-devkitc-1 

Processing esp32-s3-devkitc-1 (platform: espressif32; board: esp32-s3-devkitc-1; framework: arduino)
--------------------------------------
Verbose mode can be enabled via `-v, --verbose` option
CONFIGURATION: https://docs.platformio.org/page/boards/espressif32/esp32-s3-devkitc-1.html
PLATFORM: Espressif 32 (6.12.0) > Espressif ESP32-S3-DevKitC-1-N8 (8 MB QD, No PSRAM)
HARDWARE: ESP32S3 240MHz, 320KB RAM, 8MB Flash
DEBUG: Current (esp-builtin) On-board (esp-builtin) External (cmsis-dap, esp-bridge, esp-prog, iot-bus-jtag, jlink, minimodule, olimex-arm-usb-ocd, olimex-arm-usb-ocd-h, olimex-arm-usb-tiny-h, olimex-jtag-tiny, tumpa)
PACKAGES: 
 - framework-arduinoespressif32 @ 3.20017.241212+sha.dcc1105b 
 - tool-esptoolpy @ 2.40900.250804 (4.9.0) 
 - tool-mkfatfs @ 2.0.1 
 - tool-mklittlefs @ 1.203.210628 (2.3) 
 - tool-mkspiffs @ 2.230.0 (2.30) 
 - toolchain-riscv32-esp @ 8.4.0+2021r2-patch5 
 - toolchain-xtensa-esp32s3 @ 8.4.0+2021r2-patch5
LDF: Library Dependency Finder -> https://bit.ly/configure-pio-ldf
LDF Modes: Finder ~ chain, Compatibility ~ soft
Found 42 compatible libraries
Scanning dependencies...
Dependency Graph
|-- Adafruit BusIO @ 1.17.4
|-- NimBLE-Arduino @ 2.3.6
|-- ArduinoJson @ 7.4.2
|-- Adafruit MPU6050 @ 2.2.6
|-- Adafruit VL53L1X @ 3.1.2
|-- MFRC522 @ 1.4.12
|-- Wire @ 2.0.0
Building in release mode
Compiling .pio/build/esp32-s3-devkitc-1/src/ble.cpp.o
Archiving .pio/build/esp32-s3-devkitc-1/lib8e8/libWire.a
Indexing .pio/build/esp32-s3-devkitc-1/lib8e8/libWire.a
Archiving .pio/build/esp32-s3-devkitc-1/lib46b/libSPI.a
Indexing .pio/build/esp32-s3-devkitc-1/lib46b/libSPI.a
Archiving .pio/build/esp32-s3-devkitc-1/libdd5/libAdafruit BusIO.a
Indexing .pio/build/esp32-s3-devkitc-1/libdd5/libAdafruit BusIO.a
Compiling .pio/build/esp32-s3-devkitc-1/lib48e/NimBLE-Arduino/NimBLEAdvertisedDevice.cpp.o
src/ble.cpp: In member function 'void ConfigCharCallbacks::onWrite(NimBLECharacteristic*)':
src/ble.cpp:44:7: warning: 'template<unsigned int N> class ArduinoJson::V742PB22::StaticJsonDocument' is deprecated: use JsonDocument instead [-Wdeprecated-declarations]
       StaticJsonDocument<256> doc;
       ^~~~~~~~~~~~~~~~~~
In file included from .pio/libdeps/esp32-s3-devkitc-1/ArduinoJson/src/ArduinoJson.hpp:65,
                 from .pio/libdeps/esp32-s3-devkitc-1/ArduinoJson/src/ArduinoJson.h:9,
                 from src/ble.cpp:3:
.pio/libdeps/esp32-s3-devkitc-1/ArduinoJson/src/ArduinoJson/compatibility.hpp:63:58: note: declared here
 class ARDUINOJSON_DEPRECATED("use JsonDocument instead") StaticJsonDocument
                                                          ^~~~~~~~~~~~~~~~~~
src/ble.cpp:59:45: warning: 'bool ArduinoJson::V742PB22::JsonDocument::containsKey(TChar*) const [with TChar = const char]' is deprecated: use doc["key"].is<T>() instead [-Wdeprecated-declarations]
       if (doc.containsKey("sensor_period_ms")) {
                                             ^
In file included from .pio/libdeps/esp32-s3-devkitc-1/ArduinoJson/src/ArduinoJson.hpp:42,
                 from .pio/libdeps/esp32-s3-devkitc-1/ArduinoJson/src/ArduinoJson.h:9,
                 from src/ble.cpp:3:
.pio/libdeps/esp32-s3-devkitc-1/ArduinoJson/src/ArduinoJson/Document/JsonDocument.hpp:167:8: note: declared here
   bool containsKey(TChar* key) const {
        ^~~~~~~~~~~
src/ble.cpp:62:50: warning: 'bool ArduinoJson::V742PB22::JsonDocument::containsKey(TChar*) const [with TChar = const char]' is deprecated: use doc["key"].is<T>() instead [-Wdeprecated-declarations]
       if (doc.containsKey("obstacle_threshold_mm")) {
                                                  ^
In file included from .pio/libdeps/esp32-s3-devkitc-1/ArduinoJson/src/ArduinoJson.hpp:42,
                 from .pio/libdeps/esp32-s3-devkitc-1/ArduinoJson/src/ArduinoJson.h:9,
                 from src/ble.cpp:3:
.pio/libdeps/esp32-s3-devkitc-1/ArduinoJson/src/ArduinoJson/Document/JsonDocument.hpp:167:8: note: declared here
   bool containsKey(TChar* key) const {
        ^~~~~~~~~~~
src/ble.cpp:65:46: warning: 'bool ArduinoJson::V742PB22::JsonDocument::containsKey(TChar*) const [with TChar = const char]' is deprecated: use doc["key"].is<T>() instead [-Wdeprecated-declarations]
       if (doc.containsKey("fall_ax_threshold")) {
                                              ^
In file included from .pio/libdeps/esp32-s3-devkitc-1/ArduinoJson/src/ArduinoJson.hpp:42,
                 from .pio/libdeps/esp32-s3-devkitc-1/ArduinoJson/src/ArduinoJson.h:9,
                 from src/ble.cpp:3:
.pio/libdeps/esp32-s3-devkitc-1/ArduinoJson/src/ArduinoJson/Document/JsonDocument.hpp:167:8: note: declared here
   bool containsKey(TChar* key) const {
        ^~~~~~~~~~~
src/ble.cpp:68:41: warning: 'bool ArduinoJson::V742PB22::JsonDocument::containsKey(TChar*) const [with TChar = const char]' is deprecated: use doc["key"].is<T>() instead [-Wdeprecated-declarations]
       if (doc.containsKey("ble_tx_power")) {
                                         ^
In file included from .pio/libdeps/esp32-s3-devkitc-1/ArduinoJson/src/ArduinoJson.hpp:42,
                 from .pio/libdeps/esp32-s3-devkitc-1/ArduinoJson/src/ArduinoJson.h:9,
                 from src/ble.cpp:3:
.pio/libdeps/esp32-s3-devkitc-1/ArduinoJson/src/ArduinoJson/Document/JsonDocument.hpp:167:8: note: declared here
   bool containsKey(TChar* key) const {
        ^~~~~~~~~~~
src/ble.cpp:75:43: warning: 'bool ArduinoJson::V742PB22::JsonDocument::containsKey(TChar*) const [with TChar = const char]' is deprecated: use doc["key"].is<T>() instead [-Wdeprecated-declarations]
         if (doc.containsKey("ble_tx_power")) {
                                           ^
In file included from .pio/libdeps/esp32-s3-devkitc-1/ArduinoJson/src/ArduinoJson.hpp:42,
                 from .pio/libdeps/esp32-s3-devkitc-1/ArduinoJson/src/ArduinoJson.h:9,
                 from src/ble.cpp:3:
.pio/libdeps/esp32-s3-devkitc-1/ArduinoJson/src/ArduinoJson/Document/JsonDocument.hpp:167:8: note: declared here
   bool containsKey(TChar* key) const {
        ^~~~~~~~~~~
src/ble.cpp: In function 'void ble_init()':
src/ble.cpp:131:17: error: 'class NimBLEAdvertising' has no member named 'setScanResponse'; did you mean 'setScanResponseData'?
   pAdvertising->setScanResponse(true);
                 ^~~~~~~~~~~~~~~
                 setScanResponseData
src/ble.cpp:132:17: error: 'class NimBLEAdvertising' has no member named 'setMinPreferred'; did you mean 'setMinInterval'?
   pAdvertising->setMinPreferred(0x06);
                 ^~~~~~~~~~~~~~~
                 setMinInterval
src/ble.cpp:133:17: error: 'class NimBLEAdvertising' has no member named 'setMaxPreferred'; did you mean 'setMaxInterval'?
   pAdvertising->setMaxPreferred(0x12);
                 ^~~~~~~~~~~~~~~
                 setMaxInterval
src/ble.cpp: In function 'void ble_send_sensor_data(const char*)':
src/ble.cpp:169:43: error: 'class NimBLECharacteristic' has no member named 'getSubscribedCount'
   if (deviceConnected && pSensorDataChar->getSubscribedCount() > 0) {
                                           ^~~~~~~~~~~~~~~~~~
src/ble.cpp: In function 'void ble_send_alert(const char*)':
src/ble.cpp:182:39: error: 'class NimBLECharacteristic' has no member named 'getSubscribedCount'
   if (deviceConnected && pAlertsChar->getSubscribedCount() > 0) {
                                       ^~~~~~~~~~~~~~~~~~
Compiling .pio/build/esp32-s3-devkitc-1/lib48e/NimBLE-Arduino/NimBLEAdvertisementData.cpp.o
Compiling .pio/build/esp32-s3-devkitc-1/lib48e/NimBLE-Arduino/NimBLEAdvertising.cpp.o
Compiling .pio/build/esp32-s3-devkitc-1/lib48e/NimBLE-Arduino/NimBLEAttValue.cpp.o
Compiling .pio/build/esp32-s3-devkitc-1/lib48e/NimBLE-Arduino/NimBLEBeacon.cpp.o
Compiling .pio/build/esp32-s3-devkitc-1/lib48e/NimBLE-Arduino/NimBLECharacteristic.cpp.o
Compiling .pio/build/esp32-s3-devkitc-1/lib48e/NimBLE-Arduino/NimBLEClient.cpp.o
*** [.pio/build/esp32-s3-devkitc-1/src/ble.cpp.o] Error 1
===== [FAILED] Took 2.50 seconds =====

 *  The terminal process "platformio 'run', '--target', 'upload', '--environment', 'esp32-s3-devkitc-1'" terminated with exit code: 1. 
 *  Terminal will be reused by tasks, press any key to close it. 
